--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: ppiao.github.io
-email: chenjingpiao@gmail.com
+title: 22shubh22.github.io
+email: 22shubh22@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Let me find the fun of programming.
 #  A place I learn by writing something.
@@ -15,10 +15,10 @@ description: > # this means to ignore newlines until "baseurl:"
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://ppiao.github.io" # the base hostname & protocol for your site
+url: "https://22shubh22.github.io" # the base hostname & protocol for your site
 # twitter_username: ppiao
-github_username:  ppiao
-linkedin_username: ppiao
+github_username:  22shubh22
+#linkedin_username: 
 
 # Build settings
 markdown: kramdown
